Fix : Ajust logo on hover, the button on the home page, and readd the about image

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -23,8 +23,8 @@
       "SEEMORE": "Découvrir"
     },
     "ROLEPLAY": {
-      "RESUME": "Vivez l'aventure de jeunes personnes, découvrant la notion du Destin et de l'effet papillon...",
-      "SEEMORE": "Prochainement disponible"
+      "RESUME": "Vivez une histoire épique à travers de jeunes héros, découvrant la notion du Destin et de l'effet papillon...",
+      "SEEMORE": "Oser l'aventure"
     },
     "CHARACTERS": {
       "RESUME": "Chaque personnage a une histoire. Découvrez celles de Romain, Elisa, Jérémy... et de tous les autres, sur l'île de Célestia.",
