--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -268,6 +268,7 @@
   "LEGACY": {
     "STATUT": "Statut du propriétaire : <strong>Particulier</strong>",
     "HOST": "<strong>Hébergeur OVH<br>2 rue Kellermann<br>59100 ROUBAIX – France</strong>",
-    "CONTACT": "Pour contacter cet hébergeur, rendez-vous à l’adresse suivante :"
+		"CONTACT": "Pour contacter cet hébergeur, rendez-vous à l’adresse suivante :",
+		"IMAGES": "Note : Tous les dessins, images et illustrations de ce site ne sont pas libres de droit. Merci de ne pas les utiliser sans mon autorisation."
   }
 }
