Feat(creation): Prepare the page for creating character

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -8,7 +8,8 @@
     "RELIGION": "La Religion",
 		"CRYSTALS": "La Magie des Cristaux",
 		"POPULATION": "Les Peuples",
-    "ROLEPLAY": "Le Jeu de rôle",
+		"ROLEPLAY": "Le Jeu de rôle",
+		"CREATION": "La Création du Personnage",
     "CHARACTERS": "Les Personnages",
     "ABOUT": "A Propos",
     "LEGACY": "Mentions Légales"
