--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -272,6 +272,31 @@
     }
 	},
 	"CREATION": {
+		"MENU": {
+			"TITLE": "Fiche de personnage",
+			"TITLE01": "I - Peuple / Race",
+			"TITLE02": "II - Caractéristiques",
+			"TITLE03": "III - Compétences",
+			"TITLE04": "IV - Cristaux",
+			"TITLE05": "V - Equipement",
+			"TITLE06": "VI - Identité"
+		},
+		"INDICS": {
+			"LEFTPOINTS": "Points restants",
+			"INITIATIVE": "Initiative",
+			"PV": "Points de Vie",
+			"PE": "Points d'Energie Vitale",
+			"ARMOR": "Armure",
+			"WEAPON": "Arme (optionnel)",
+			"ATTACKBONUS": "Attaque",
+			"DEFENCEBONUS": "Défense",
+			"MOBILITY": "Mobilité",
+			"ACTIONSMALUS": "Malus aux actions (hors Défense)",
+			"CATEGORY": "Catégorie",
+			"COUNT": "Chargeur",
+			"COOLDOWN": "Rechargement",
+			"ZONE": "Portée efficace"
+		},
 		"HEROS": "Un personnage est défini par deux séries de chiffres : ses <b>caractéristiques</b> et ses <b>compétences</b>. Les caractéristiques définissent ce qu’est le personnage, et les compétences ce qu’il sait. Votre personnage sera plus ou moins fort, plus ou moins intelligent, plus ou moins adroit. Et c’est vous qui choisirez si, au cours de sa vie, il a appris à se battre ou s'il a préféré se tourner vers l'érudition, la médecine...<br>Commencer de préférence par :<br>1) Sélectionner un peuple / une race, cela va découler sur les caractéristiques et les compétences.<br>2) Ajouter des points dans les caractéristiques, et regarder l'influence sur les valeurs dérivées (Initiative, PV, et PE)<br>3) Ajouter des points dans les compétences, et optionnellement choisir des spécialités dans certaines d'entre elles.<br>4) Sélectionner des équipements, et choisir des cristaux (des pouvoirs) pour votre personnage.<br>5) Et finir par lui donner une identité (nom, image, description)",
 		"CARACTS01": "Toute personne est dotée de capacités de base qui lui sont inhérentes et qu’il peut utiliser de bien des manières. Ces aptitudes naturelles sont définies par cinq caractéristiques distinctes, chacune évaluée sur une échelle allant de <b>1 à 5</b>.",
 		"CARACTS02": "Un score de 1 dans une caractéristique indique une vraie faiblesse dans le domaine concerné, tandis qu’un 2 place le personnage dans la moyenne, ni plus ni moins. A partir de 3, la personne dispose d’une facilité particulière dans la caractéristique concernée, et un 4 indique des facultés exceptionnelles. Enfin, un score de 5 représente le maximum des capacités : seuls quelques très rares individus atteignent ce score.",
@@ -403,6 +428,10 @@
 		"SPECIAUX": {
 			"NAME": "Cristaux de type Spéciaux",
 			"HELP": "<b>Spéciaux</b><br><br>Cette compétence permet de comprendre le fonctionnement des cristaux de type « spéciaux », des cristaux qui n'entrent pas dans les autres catégories, et d'en augmenter l'efficacité de leur utilisation.<br><br><i>Exemples :</i><br>- Entraver une personne (Pou. + Spéciaux, Diff. 9).<br>- Voler de la vie (Pou. + Spéciaux, Diff. 17).<br>- Transférer les blessures et la douleur (Pou. + Spéciaux, Diff. 22)."
+		},
+		"EQUIPEMENT": {
+			"TEXT": "Equipement physique :<br />Les cristaux coûtent en Energie Vitale : pour certains personnages il est alors vital d'avoir un équipement adéquat en cas de panne d'énergie.<br>L'équipement est limité à trois slots pour ce qui est armes et armures : cela correspond aussi bien à la capacité physique d'une personne à transporter des choses sur elle quotidiennement.",
+			"HELP": "<b>Indicateurs</b><br><br><i>Attaque :</i><br>Bonus accordé au test de Combat pour l'utilisateur de l'arme.<br><br><i>Défense :</i><br>Bonus accordé à la Défense pour l'utilisateur de l'arme.<br><br><i>Catégories :</i><br>Les armes légères demandent un test d’Habileté + Combat pour être employées, les armes moyennes et lourdes un test de Vigueur + Combat. Les armes lourdes demandent les deux mains pour être utilisées.<br><br><i>Chargeur :</i><br>La quantité d’attaques pouvant être réalisées avec l’arme sans avoir besoin de la recharger.<br><br><i>Rechargement :</i><br>Le temps de rechargement nécessaire.<br>Rapide : l’arme se recharge sans perdre de temps.<br>Action : Recharger l’arme prend l’action du tour du personnage, ne lui laissant que la possibilité de se déplacer et d’effectuer des actions rapides lorsqu’il recharge.<br><br><i>Portée efficace :</i><br>Chaque fois que cette portée est dépassée, le personnage subit un malus cumulatif de -2 à son test de Combat. Ainsi, un archer tirant sur une cible à 100m tire à 4 fois sa portée efficace, subissant un malus de -8 à son test."
 		}
 	},
 	"ABOUT": {
