--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -450,6 +450,9 @@
 		"EQUIPEMENT": {
 			"TEXT": "Pour certains personnages il est vital d'avoir un équipement adéquat en cas de panne d'Energie Vitale. L'équipement est limité à trois slots pour ce qui est armes et armures : cela correspond aussi bien à la capacité physique d'une personne à transporter des choses sur elle quotidiennement.",
 			"HELP": "<b>Indicateurs</b><br><br><i>Attaque :</i><br>Bonus accordé au test de Combat pour l'utilisateur de l'arme.<br><br><i>Défense :</i><br>Bonus accordé à la Défense pour l'utilisateur de l'arme.<br><br><i>Catégories :</i><br>Les armes légères demandent un test d’Habileté + Combat pour être employées, les armes moyennes et lourdes un test de Vigueur + Combat. Les armes lourdes demandent les deux mains pour être utilisées.<br><br><i>Chargeur :</i><br>La quantité d’attaques pouvant être réalisées avec l’arme sans avoir besoin de la recharger.<br><br><i>Rechargement :</i><br>Le temps de rechargement nécessaire.<br>Rapide : l’arme se recharge sans perdre de temps.<br>Action : Recharger l’arme prend l’action du tour du personnage, ne lui laissant que la possibilité de se déplacer et d’effectuer des actions rapides lorsqu’il recharge.<br><br><i>Portée efficace :</i><br>Chaque fois que cette portée est dépassée, le personnage subit un malus cumulatif de -2 à son test de Combat. Ainsi, un archer tirant sur une cible à 100m tire à 4 fois sa portée efficace, subissant un malus de -8 à son test."
+		},
+		"IDENTITY": {
+			"TEXT": "Pour certains personnages il est vital d'avoir un équipement adéquat en cas de panne d'Energie Vitale. L'équipement est limité à trois slots pour ce qui est armes et armures : cela correspond aussi bien à la capacité physique d'une personne à transporter des choses sur elle quotidiennement."
 		}
 	},
 	"ABOUT": {
