Refactor(creationslider): Use frJSON for specialistic

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -290,6 +290,7 @@
 			"INITIATIVE": "Initiative",
 			"PV": "Points de Vie",
 			"PE": "Points d'Energie Vitale",
+			"SPE": "Spécialité (option)",
 			"CRYSTAL": "Nom du cristal",
 			"TYPE": "Type",
 			"RANK": "Rang",
