Style(creation): Add mobile version

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -274,7 +274,7 @@
 	},
 	"CREATION": {
 		"MENU": {
-			"TITLE": "Fiche de personnage",
+			"TITLE": "Fiche de perso",
 			"TITLE01": "I - Peuple / Race",
 			"TITLE02": "II - Caractéristiques",
 			"TITLE03": "III - Compétences",
